# EasyNN

./: .gitattributes  .gitignore  404.html  DenseLayerTester.py  LICENSE  LICENSE.txt  README.md  dan.py  index.html  jack.py  liam.py  mkdocs.yml  mnist_paramaters.npy  nate.py  number_parameters.npy  objects.inv  pyproject.toml  requirements.txt  run.py  setup.py  test.py
.github/workflows/: ci.yml
Deliverables/: SDD.docx  SRS  SRS.docx  System TestPlan.docx
EasyNN/: Batch.py  DeepNeuralNetwork.py  DenseLayer.py  DenseLayerTester.py  EasyNN.py  NeuralNetwork.py  Point.py  README.md  Tensor.py  __init__.py  _abc.py  abc.py  handler.py  import_this.py  requirements.txt  run.py  setup.py  typing.py
EasyNN/accuracy/: __init__.py  accuracy.py  categorical.py  regression.py
EasyNN/batch/: __init__.py  abc.py  mini.py
EasyNN/callbacks/: __init__.py  abc.py  print.py  printer.py
EasyNN/classifier/: classifier.py
EasyNN/classify/: classify.py
EasyNN/dataset/: __init__.py  common.py  download.py  load.py  mnist.py
EasyNN/examples/: mnist.py  mnist_fashion_trained_model.py  mnist_fashion_untrained_model.py  mnist_numbers_trained_model.py  (+1 more)
backup/: README.md
cifar/: README.md  cifar10_parameters.npz
diagrams/: dataflow.drawio
docs/: getting_started.md  index.md
documents/: EasyNN Sprint 1 Demo.pptx  Readme.md
examples/: mnist_numbers_trained_model.py  mnist_numbers_untrained_model.py
getting_started/: index.html
images/: README.md
media/: README.md
tests/: ml_optimizer_test.py  model_test.py  sphereTest.py
video/: Readme.md
(+186 files in other folders)
